# fine-tune-text-classification

./: .gitignore  01_normal_text_search.ipynb  02_fine_tune.ipynb  03_datasets.ipynb  04_pipeline.ipynb  05_lora_fine_tune.ipynb  06_semi_supevised_idea.ipynb  07_tokenization.ipynb  fine_tune.ipynb  keywords.config.yaml  normal_text_search.ipynb  pyproject.toml  quick_fix.py
docs/: PU_LEARNING_EXPLAINED.md  PU_LESSON_LEARNED.md  SEMI_SUPERVISED.md
package/: utils.py
package/models/: modified_logistic_regression.py
