[project]
name = "fine-tune-text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
    "datasets>=3.2.0",
    "accelerate>=1.1.0",
    "protobuf>=3.20.0",
    "evaluate>=0.4.6",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "sentence-transformers>=5.2.3",
    "pythainlp>=5.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
